--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -5,6 +5,7 @@
     android:name="br.com.udacity.bakingtime.RecipeListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="8dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     tools:context="br.com.udacity.bakingtime.ui.RecipeListActivity"
