feat: Including the ExoPlayer and displaying the step videos.
Multiple layout improvements are also included.

--- a/app/src/main/res/layout-land/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-land/activity_recipe_detail.xml
@@ -1,20 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.udacity.bakingtime.ui.RecipeStepsActivity">
+    android:fitsSystemWindows="true"
+    tools:context="br.com.udacity.bakingtime.ui.RecipeDetailActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/steps_app_bar"
+        android:id="@+id/detail_app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/steps_toolbar_layout"
+            android:id="@+id/detail_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -23,20 +23,33 @@
             app:toolbarId="@+id/toolbar">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/steps_toolbar"
+                android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/steps_container"
+        android:id="@+id/step_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        app:layout_anchor="@id/detail_toolbar"
+        app:layout_anchorGravity="bottom|center_vertical|end"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_forward_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
-
