--- a/app/src/main/res/layout/recipe_list_content.xml
+++ b/app/src/main/res/layout/recipe_list_content.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/recipe_card_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_height"
         android:layout_gravity="center"
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/id_text"
+                android:id="@+id/name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -28,7 +28,7 @@
                 android:textAppearance="?attr/textAppearanceListItem" />
 
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/servings_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
