--- a/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
@@ -47,11 +47,10 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <android.support.v4.widget.NestedScrollView
+            <android.support.design.widget.CoordinatorLayout
                 android:id="@+id/step_list_container"
                 android:layout_width="@dimen/item_width"
-                android:layout_height="wrap_content"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                android:layout_height="wrap_content" />
 
             <!-- A small divider -->
             <View
