--- a/app/src/main/res/layout-land/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-land/activity_recipe_detail.xml
@@ -35,9 +35,10 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/step_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_anchor="@id/detail_toolbar"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/detail_app_bar"
         app:layout_anchorGravity="bottom|center_vertical|end"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
     <android.support.design.widget.FloatingActionButton
