--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -35,6 +35,8 @@
             android:padding="16dp"
             android:text="@string/error_loading_message"
             android:textSize="20sp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:visibility="invisible" />
     </android.support.design.widget.CoordinatorLayout>
 
